--- a/index.ipynb
+++ b/index.ipynb
@@ -135,9 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "6cfcdafa-5846-11e9-ac71-11bb6db7c7b6"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"6687ebd6-4f6d-4b52-92c5-2ea1623b72d2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6687ebd6-4f6d-4b52-92c5-2ea1623b72d2\", [{\"type\": \"scatter\", \"uid\": \"6d1ecfca-5846-11e9-ac71-11bb6db7c7b6\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"6687ebd6-4f6d-4b52-92c5-2ea1623b72d2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6687ebd6-4f6d-4b52-92c5-2ea1623b72d2\", [{\"type\": \"scatter\", \"uid\": \"6d1ecfca-5846-11e9-ac71-11bb6db7c7b6\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([\n",
     "    {}\n",
